Version 0.10.2
- Fix ticket #44

Version 0.10.1
- Add client session login limit (ticket #41)
- Added an optional transaction retry policy (NowOrLaterRetryPolicy)
  that is more robust in handling problematic tasks.  This policy is
  most useful and recommended for production deployments. (ticket #38)
- Fix tickets #34, #35, #36, #37, #42

Version 0.10.0
- Rebranded as RedDwarf (ticket #2)
- Added support for client session relocation to client session
  and channel services (issue #12)
- Added affinity graph builders and group finders, for load balancing
  multi-node clusters (required for issue #54)
- Fix issues #201, #213, #215, #216

Version 0.9.11:
- Introduced application level clock accessible via the watchdog service.
  The task service uses this clock instead of system time to determine
  when to run periodic and delayed tasks (issue #40)
- Added support for pluggable transaction retry policy (issue #181)
- Added details about TransactionListeners in Profiling (issue #182)
- Added TaskManager.shouldContinue (issue #185)
- Added support for configuring and running additional services in
  the core node (issue #189)
- Added support for JMX-based shutdown (issue #193)
- Added support for including extension libraries on startup (issue #194)
- Added multivalued health to node state
- Fix issues #168, #169, #171, #173, #174, #178, #183, #187, #190, #191,
  #195, #198, #199

Version 0.9.10:
- Add DataManager.getObjectId (issue #99) and
  DataManager.getBindingForUpdate (issue #120)
- AppListener no longer extends ManagedObject (issue #108)
- Split internal API classes used to write custom services, transports,
  protocols, and authenticators into a separate sgs-server-internal-api.jar
  file (issue #162)
- Service startup is modified so a guaranteed set of services is always
  started, allowing services to use services that are started after them
  (issue #145)
- Add a locking AccessCoordinator and add a configuration option for