@@ -56,12 +56,12 @@
 #  db - To denote using the BerkeleyDB Native edition
 #  je - To denote using the BerkeleyDB Java edition
 #  custom - To denote using neither
-# The default value for this property is db.  If the value of
+# The default value for this property is je.  If the value of
 # this property is set to custom, neither the db nor je jar
 # files from the ${SGS_HOME}/lib directory will be included
 # on the classpath.
 #
-#BDB_TYPE = db
+#BDB_TYPE = je
 
 # Set this property to change the location of the 
 # BerkeleyDB native libraries to use when running the 
