@@ -4,6 +4,10 @@
 # When booting a RedDwarf server using the sgs-boot.jar,
 # this configuration file is the default application configuration used.
 #
+# NOTE: This is only a subset of the possible configuration options
+# available in RedDwarf server.  Please consult the configuration index
+# available in the "RedDwarf All" JavaDocs for a more exhaustive list.
+#
 
 # ======================================================================
 # Required Properties
@@ -107,17 +111,18 @@ com.sun.sgs.app.root=data
 #com.sun.sgs.impl.service.data.store.DataStoreImpl.directory
 
 # The name of the class that implements the underlying database.  The 
-# default value selects a database implementation based on Berkeley DB.
-# Optionally, Berkeley DB Java Edition can be specified.  Note that the
-# value of this property will be overridden by the bootup procedure
-# if the BDB_TYPE property in sgs-boot.properties is specified.
+# default value selects a database implementation based on Berkeley DB
+# Java Edition. Optionally, Berkeley DB Native Edition can be specified.
+# Note that the value of this property will be overridden by the bootup
+# procedure if the BDB_TYPE property in sgs-boot.properties is specified.
 #
-#com.sun.sgs.impl.service.data.store.db.environment.class=com.sun.sgs.impl.service.data.store.db.bdb.BdbEnvironment
 #com.sun.sgs.impl.service.data.store.db.environment.class=com.sun.sgs.impl.service.data.store.db.je.JeEnvironment
+#com.sun.sgs.impl.service.data.store.db.environment.class=com.sun.sgs.impl.service.data.store.db.bdb.BdbEnvironment
 
 # The size in bytes of the Berkeley DB cache.  The value must not be less than
 # 20000.  Using a cache too small can introduce significant reduction in
 # performance
+# NOTE: This property is only valid when using the BDB Native edition which
 #
 #com.sun.sgs.impl.service.data.store.db.bdb.cache.size=128000000
 
@@ -125,6 +130,7 @@ com.sun.sgs.app.root=data
 # Note that automatic log file removal is likely to make catastrophic recovery
 # of the database impossible, because log files that may be needed will not
 # have been backed up.
+# NOTE: This property is only valid when using the BDB Native edition
 #
 #com.sun.sgs.impl.service.data.store.db.bdb.remove.logs=false
 
